fixed alignment of warehouselist page

--- a/src/components/WarehouseTableRow/WarehouseTableRow.scss
+++ b/src/components/WarehouseTableRow/WarehouseTableRow.scss
@@ -1,124 +1,128 @@
-// @use "src/styles/partials/fonts" as *;
-// @use "src/styles/partials/global" as *;
 @use "/src/styles/partials/colors" as *;
 @use "/src/styles/partials/functions" as *;
 @use "/src/styles/partials/variables" as *;
 @use "/src/styles/partials/mixins" as *;
 
-.row {
+.WarehouseTableRow {
+  @include displayTablet {
+    &:hover {
+      background-color: rgba(156, 201, 238, 0.118);
+    }
+  }
   &__divider {
     width: 100%;
-    height: 1px;
-    border: none;
-    background-color: $colSecondaryCloud;
-    margin-bottom: 16px;
+    border: 0.5px solid $colSecondaryCloud;
+    @include displayTablet {
+      margin: 0px;
+      padding: 0px;
+    }
+    &--firstrow {
+      margin-top: $pad-1;
+      @include displayTablet {
+        border: none;
+      }
+    }
   }
-  &__main-info-action {
+  &__main {
     display: flex;
     flex-direction: column;
+    padding-left: $pad-4;
     width: 100%;
     @include displayTablet {
+      padding-top: $pad-3;
+      padding-right: $pad-4;
       flex-direction: row;
-      justify-content: space-between;
-      padding: 0 24px;
+      justify-content: flex-start;
     }
-  }
-
-  &__title {
-    &--action {
-      display: none;
-    }
-    @include displayTablet {
-      display: none;
-    }
-  }
-  &__value {
-    font-size: toRem(13);
-    font-weight: 400;
-    line-height: toRem(20);
-    @include displayTablet {
-      font-size: toRem(14);
-    }
-
-    // text-align: left;
-
-    &--warehouse {
-      font-size: toRem(13);
-      font-weight: 600;
-      //   color: $colPrimaryInstock-Indigo;
-      color: #2e66e5;
-      line-height: toRem(20);
+    &__info {
+      display: flex;
+      justify-content: flex-start;
+      flex-wrap: wrap;
       @include displayTablet {
-        font-size: toRem(14);
+        display: contents;
+      }
+      &__col {
+        display: flex;
+        flex-direction: column;
+        gap: $pad-1;
+        @include displayTablet {
+          display: contents;
+        }
+        &--actions {
+          flex-grow: 1;
+          width: 100%;
+          display: flex;
+          @include displayTablet {
+            display: contents;
+          }
+        }
+        &__field {
+          display: contents;
+          @include displayTablet {
+            display: block;
+          }
+          &__label {
+            color: $colSecondarySlate;
+            margin-bottom: $pad-1;
+            padding-right: $pad-7;
+            @include displayTablet {
+              display: none;
+            }
+            &__link {
+              display: flex;
+              align-items: flex-start;
+              &__icon {
+                display: flex;
+              }
+            }
+          }
+          &__data {
+            padding-bottom: $pad-3;
+            text-align: left;
+            @include displayTablet {
+            }
+            &--link {
+              color: $colPrimaryInstock-Indigo;
+            }
+          }
+          &__icons {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            padding-right: $pad-4;
+            @include displayTablet {
+              padding: 0px;
+              justify-content: flex-end;
+              margin: 0;
+              flex-grow: 1;
+            }
+            &__delete {
+              padding-right: $pad-3;
+              margin-left: -$pad-2;
+            }
+          }
+        }
       }
     }
-    &--contact-name {
-      font-size: toRem(13); //for some reason toRem(13) wouldn't work
-      font-weight: 400;
-      line-height: toRem(20);
-      margin-bottom: 16px;
-      @include displayTablet {
-        font-size: toRem(14);
-      }
-    }
   }
-
-  &__main-info {
+  &-stockTicker {
+    background-color: rgb(225, 250, 226);
+    color: $colSupportGreen;
+    border-radius: 20px;
+    height: toRem(22);
+    margin-bottom: toRem(10);
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    padding: 0 24px;
+    justify-content: center;
+    padding-top: toRem(2);
+    padding-left: toRem(10);
+    padding-right: toRem(10);
+    width: max-content;
     @include displayTablet {
-      display: contents;
+      margin-bottom: 0;
     }
-  }
-  //   &__contact-info {
-  //     display: flex;
-  //     flex-direction: column;
-  //     max-width: 50%;
-  //   }
-
-  &__warehouse-address {
-    // width: 140px;
-    max-width: 40%;
-    margin-right: 24px;
-    @include displayTablet {
-      display: contents;
-    }
-  }
-  &__contact-info {
-    max-width: 50%;
-    flex-grow: 1;
-    @include displayTablet {
-      display: contents;
-
-      // font-size: toRem(14);
-    }
-  }
-
-  &__group {
-    display: flex;
-    flex-direction: column;
-  }
-  &__warehouse-icon {
-    display: flex;
-    align-items: center;
-    margin-bottom: 16px;
-  }
-  &__action-icons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 0 24px;
-    margin: 12px 0 16px 0;
-    @include displayTablet {
-      padding: 0;
-      margin: 0;
-    }
-    &-delete {
-      cursor: pointer;
-      margin: 0 8px 0 -8px;
+    &--nostock {
+      background-color: rgb(250, 225, 225);
+      color: $colSupportRed;
     }
   }
 }
