--- a/src/pages/WarehouseListPage/WarehouseListPage.scss
+++ b/src/pages/WarehouseListPage/WarehouseListPage.scss
@@ -1,97 +1,115 @@
-// @use "src/styles/partials/fonts" as *;
-// @use "src/styles/partials/global" as *;
 @use "/src/styles/partials/colors" as *;
 @use "/src/styles/partials/functions" as *;
 @use "/src/styles/partials/variables" as *;
 @use "/src/styles/partials/mixins" as *;
 
-.main {
-  //comment out the next 4 lines when combined with rest of page
-  // position: absolute;
-  // left: 4.27%;
-  // right: 4.27%;
-  // top: 7.53%;
-
-  background: $colPrimaryWhite;
-  box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
-  border-radius: 3px;
-  &__header {
-    padding: 36px 24px 24px 24px;
-    display: flex;
-    flex-direction: column;
+.WarehouseListPage {
+  display: flex;
+  background-color: $colBackgroundGraphite;
+  &-spacer {
+    background-color: $colBackgroundGraphite;
+    width: $pad-3;
+    height: 105px;
     @include displayTablet {
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-    }
-  }
-  &__title {
-    margin-bottom: 16px; //this somehow doesn't get applied
-    @include displayTablet {
-    }
-  }
-  &__search {
-    // width: 295px;
-    height: 36px;
-    margin-top: 16px;
-    background: $colPrimaryWhite;
-
-    border: 1px solid #bdc5d5;
-    border-radius: 20px;
-    box-sizing: border-box;
-    background-image: url("src/assets/images/Icons/search-24px.svg");
-    background-repeat: no-repeat;
-    background-position: 99% center;
-    text-indent: 1rem;
-    font-size: 1rem;
-    margin-bottom: 16px;
-    @include displayTablet {
-      width: 240px;
-      margin-left: 80px;
-      height: 38px;
+      width: $pad-5;
     }
     @include displayDesktop {
-      width: 340px;
-      margin-right: -300px;
+      width: toRem(140);
     }
   }
-  &__button {
-    height: 36px;
-    font-family: "Titillium Web", sans-serif;
-    width: 100%;
-    background: $colPrimaryInstock-Indigo;
-    border-radius: 20px;
-    flex-grow: 0;
-    border: none;
-    color: white;
-    &:hover {
-      background: $colPrimaryInstock-Black;
-    }
-    @include displayTablet {
-      width: 200px;
-      font-size: toRem(16);
-      height: 38px;
-    }
+  &__left {
+    background: $colBackgroundLight-Gray;
   }
-}
-
-.table {
-  &__container {
-    width: 100%;
+  &__right {
+    background: $colBackgroundLight-Gray;
   }
-  &__header {
-    display: none;
-    @include displayTablet {
+  &__main {
+    background: $colPrimaryWhite;
+    box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
+    border-radius: 3px;
+    flex-grow: 1;
+    &__header {
+      padding: $pad-4 $pad-4 $pad-2 $pad-4;
       display: flex;
-      align-items: center;
-      &-container {
-        height: 36px;
-        display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      flex-direction: column;
+      @include displayTablet {
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: flex-end;
         align-items: center;
-        padding: 0 24px;
+      }
+    }
+    &__title {
+      margin-bottom: $pad-3;
+      @include displayTablet {
+        flex-grow: 1;
+      }
+    }
+    &__search {
+      height: toRem(36);
+      margin-top: $pad-3;
+      background: $colPrimaryWhite;
+      border: 1px solid #bdc5d5;
+      border-radius: 20px;
+      box-sizing: border-box;
+      background-image: url("src/assets/images/Icons/search-24px.svg");
+      background-repeat: no-repeat;
+      background-position: 95% center;
+      text-indent: 1rem;
+      font-size: 1rem;
+      margin-bottom: $pad-3;
+      width: 100%;
+      @include displayTablet {
+        width: toRem(190);
+        margin-right: $pad-3;
+        height: torRem(3);
+      }
+      @include displayDesktop {
+        width: toRem(250);
+      }
+    }
+    &__button {
+      height: toRem(36);
+      width: 100%;
+      background: $colPrimaryInstock-Indigo;
+      border-radius: 20px;
+      border: none;
+      color: white;
+      &:hover {
+        background: $colPrimaryInstock-Black;
+      }
+      @include displayTablet {
+        width: toRem(168);
+        height: toRem(38);
+      }
+    }
+  }
+
+  &__table {
+    width: 100%;
+    &__header {
+      display: none;
+      @include displayTablet {
+        display: flex;
+        justify-content: flex-start;
         background: rgba(247, 248, 249, 0.7);
+        padding-left: $pad-4;
+        padding-right: $pad-4;
+        &__col {
+          display: flex;
+          justify-content: flex-start;
+          &__group {
+            height: toRem(36);
+            display: flex;
+            align-items: center;
+            width: 100%;
+            &--actions {
+              display: flex;
+              justify-content: flex-end;
+            }
+          }
+        }
       }
     }
   }
